# runix

./: .gitignore  Cargo.toml  LICENSE  README.md  art.txt
src/: ai.rs  main.rs  object_art.rs  word_art.rs
src/cache/: local.rs  shared.rs
