[package]
name = "runix"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
dirs = "5"
tokio = { version = "1", features = ["full"] }
redis = "0.27"
anyhow = "1"
indicatif = "0.17"
ahash = "0.8"