[package]
name = "runix-cli"
version = "1.1.0"
edition = "2021"
authors = ["Harsh Pathak <[harphy45@gmail.com]>"]
description = "A CLI tool for ASCII art in your terminal"
license = "MIT"
repository = "https://github.com/Harsh-pa-thak/runix"
homepage = "https://github.com/Harsh-pa-thak/runix"
readme = "README.md"
keywords = ["ascii", "art", "cli", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "runix"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
dirs = "5"
tokio = { version = "1", features = ["full"] }
redis = "0.27"
anyhow = "1"
indicatif = "0.17"
ahash = "0.8"
figlet-rs = "0.1"